compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_label_shorthand_pattern_arg_shadowing.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Wibble { Wibble(arg1: Int, arg2: Bool ) }\n\npub fn main() {\n  let Wibble(arg1:, arg2:) = Wibble(1, True)\n  let arg1 = False\n  arg1\n}\n"
---
----- SOURCE CODE

pub type Wibble { Wibble(arg1: Int, arg2: Bool ) }

pub fn main() {
  let Wibble(arg1:, arg2:) = Wibble(1, True)
  let arg1 = False
  arg1
}


----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:5:14
  │
5 │   let Wibble(arg1:, arg2:) = Wibble(1, True)
  │              ^^^^ This variable is never used

Hint: You can ignore it with an underscore: `arg1: _`.

warning: Unused variable
  ┌─ /src/warning/wrn.gleam:5:21
  │
5 │   let Wibble(arg1:, arg2:) = Wibble(1, True)
  │                     ^^^^ This variable is never used

Hint: You can ignore it with an underscore: `arg2: _`.
